app/app.css
/* Space out content a bit */
body {
    font-family:'robotoregular';
    background-color: #f5f5f5;
    overflow:hidden;
}

::-webkit-scrollbar {
    width: 5px;
    height: 5px;
}

::-webkit-scrollbar-track {
    background-color:#ccc;
}

::-webkit-scrollbar-thumb {
    background-color:#999;
}

.tooltip {
	font-family:'robotolight';
	font-size:13px;
	letter-spacing:0.3px;
	padding:15px;
}

.dropdown-toggle {
	cursor:pointer;	
}

.badge {
    border-radius: 100%;
    width: 22px;
    height: 22px;
    padding: 0;
    position: absolute;
    z-index: 1;
    line-height: 19px;
    top: 4px;
    left: 2px;
    background-color: rgba(220, 112, 0, 1);
    border: 2px solid #a61229;
    font-family: 'robotomedium';
    font-weight: normal;
}

.form-container {
	width: 650px;
    background-color: #fff;
    padding: 25px;
    border-radius: 3px;
    margin-left: auto;
    margin-right: auto;
	-webkit-box-shadow: 3px 3px 6px rgba(0,0,0,0.04);
    -moz-box-shadow: 3px 3px 6px rgba(0,0,0,0.04);
    box-shadow: 3px 3px 6px rgba(0,0,0,0.04);
}


.form-control {
    box-shadow:none;
    border-radius:0;
    border-color:#ececec;
}

.btn {
    border:none;
}

.btn:focus,
.btn:active:focus,
.btn.active:focus,
.btn.focus,
.btn:active.focus,
.btn.active.focus {
    outline: none;
}

a {
    color:#a61229;
	-webkit-transition: all .1s;
    -moz-transition: all .1s;
    -ms-transition: all .1s;
    -o-transition: all .1s;
    transition: all .1s;
}

a:hover {
    color:#941A1A;
}

.breadcrumb {
    background-color:transparent;
    padding:0;
    font-size:18px;
	float:left;
    margin-bottom: 0;
}

.buttons-on-bottom {
	float:left;
}

.filter-inner {
	background-color: #fff;
    padding: 15px;
    margin-top: 104px;
    border: 1px solid #E6E6E6;	
}

.filter-inner h4 {
	font-family: 'robotobold';
    color: #333;
    letter-spacing: 0.5px;
}


/** LOGIN PAGE **/

.login-wrapper {
    width: 350px;
    padding: 40px;
    background-color: #FFFFFF;
    margin: 200px auto 25px;
    border-radius: 2px;
    box-shadow: 0 2px 2px rgba(255, 255, 255, 0.3);
}
.login .logo {
    text-align: center;
}
.login .logo img {
    width:75%;
    margin:8px auto 40px;
}

/** END LOGIN PAGE **/

/** DETAIL PAGE **/

.detail-page {
    /*background-color: #fff;
    padding: 15px;
    border: 1px solid #E6E6E6;*/
}

/** END DETAIL PAGE **/

/** BRAND **/

.brand-bg {
    background-color:#A61229;
}

button.brand-bg {
    background-color:#A61229;
    color:#fff;
}

button.brand-bg:hover {
    background-color:#941A1A;
    color:#fff;
}

.brand {
	position: absolute;
    width: 120px;
    margin-left: auto;
    margin-right: auto;
    left: 0;
    right: 0;
}

a.logo {
	height: 42px;
    display: block;
	text-align: center;
    line-height: 38px;
	opacity: 0.8;
	-webkit-transition: all .2s;
    -moz-transition: all .2s;
    -ms-transition: all .2s;
    -o-transition: all .2s;
    transition: all .2s;
}

a.logo:hover {
	opacity:1;
}

.logo img {
	width: 100px;
}

/** END OF BRAND **/


/** LOADER **/

.loader {
  font-size: 2px;
  position: relative;
  text-indent: -9999em;
  border-top: 1.1em solid rgba(166, 12, 41, 0.2);
  border-right: 1.1em solid rgba(166, 12, 41, 0.2);
  border-bottom: 1.1em solid rgba(166, 12, 41, 0.2);
  border-left: 1.1em solid #A61229;
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
  -webkit-animation: load8 1.1s infinite linear;
  animation: load8 1.1s infinite linear;
  float: left;
  margin-left: 10px;
  margin-top: 3px;
}
.loader,
.loader:after {
  border-radius: 50%;
  width: 10em;
  height: 10em;
}
@-webkit-keyframes load8 {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}
@keyframes load8 {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

/** END OF LOADER **/

/* Everything but the jumbotron gets side spacing for mobile first views */
.header,
.marketing,
.footer {
    padding-left: 15px;
    padding-right: 15px;
}

/* Custom page header */
.header {
    border-bottom: 1px solid #e5e5e5;
}
/* Make the masthead heading the same height as the navigation */
.header h3 {
    margin-top: 0;
    margin-bottom: 0;
    line-height: 40px;
    padding-bottom: 19px;
}

/* Custom page footer */
.footer {
    padding-top: 19px;
    color: #777;
    border-top: 1px solid #e5e5e5;
}

nav.navbar {
    background-color: #A61229;
    border-color: #941A1A;
    min-height:30px;
}

a.navbar-brand img {
    height:45px;
    margin-top:-6px;
}

.navbar-default .navbar-toggle .icon-bar {
    background-color:#fff;
}

.navbar-default .navbar-toggle:hover {
    background-color:#9a1026;
}

.navbar-default .navbar-toggle:focus {
    background-color:#A61229;
}

.container-narrow > hr {
    margin: 30px 0;
}

/* Main marketing message and sign up button */
.jumbotron {
    text-align: center;
    border-bottom: 1px solid #e5e5e5;
}
.jumbotron .btn {
    font-size: 21px;
    padding: 14px 24px;
}

/* Supporting marketing content */
.marketing {
    margin: 40px 0;
}
.marketing p + h4 {
    margin-top: 28px;
}

ul.header-menu {
    float:left;
    padding-left:23px;
}

ul.header-menu li {
    list-style:none;
    float:left;
    margin-right:15px;
    margin-top:10px;
}

ul.header-menu li a{
    color:#fff;
    text-decoration:none;
    opacity:0.9;
}

ul.header-menu li a:hover{
    opacity:1;
}

.nav>li>a {
    color: #696969;
    border-left:3px solid transparent;
    -webkit-transition: all .2s;
    -moz-transition: all .2s;
    -ms-transition: all .2s;
    -o-transition: all .2s;
    transition: all .2s;
}

.sidebar .nav>li ul {
    border-left: 3px solid #A61229;
}

.sidebar .nav>li ul>li a {
    font-family:'robotoregular';
    background-color:#fdfdfd;
}

.nav>li>a:visited {
}
/* ... */

